# clock

./: .gitignore  BokehApp.py  DrawClock.py
Datasheets/: bka30d main view.avif  bka30d motor shaft.avif  bka30d side view.avif  bka30d top view.avif  bka30d-r5 physical specs.avif
Firmware/accelstepper/: ClockStepper.cpp  ClockStepper.h  MotorVID28.cpp  MotorVID28.h  accelstepper.ino  util.c  util.h
Firmware/microstep_test/: microstep_test.ino
Simulator/: ArduinoInterface.py  BaseDisplayAlgorithm.py  BokehApp.py  ClockHandController.py  Constants.py  DrawCharacters.py  DrawClock.py  HandOffsetCalculator.py  HandSpeed.py  HandSpeedTester.py  OffDisplayAlgorithm.py  TestMotorsAlgorithm.py  TextDisplayAlgorithm.py  TimeDisplayAlgorithm.py  TimeDisplayAlgorithm2.py  TimeDisplayAlgorithm3.py  pyproject.toml
Simulator/DisplayAlgorithms/: BacklashDisplayAlgorithm.py  BaseDisplayAlgorithm.py  CalibrationDisplayAlgorithm.py  DebugAlgorithm.py  OffDisplayAlgorithm.py  SimpleTimeAlgorithm.py  TestMotorsAlgorithm.py  TextDisplayAlgorithm.py  TimeDisplayAlgorithm.py  TimeDisplayAlgorithm2.py  TimeDisplayAlgorithm3.py  TimeDisplayAlgorithm4.py  TimeDisplayAlgorithm5.py
