[tool.poetry]
name = "clock"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tornado = "^6.4.2"
bokeh = "^3.6.2"
svglib = "^1.5.1"
selenium = "^4.27.1"
geckodriver = "^0.0.1"
opencv-python = "^4.11.0.86"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
